# JR

./: .gitignore  README.md
adventofcode/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
first/src/: main.rs
task_workspace/: .gitignore  Cargo.toml  tasks.json
task_workspace/clapityclap/: Cargo.toml
task_workspace/clapityclap/src/: config.rs  console_reader.rs  main.rs
task_workspace/ratatask/: Cargo.toml  README.md
task_workspace/ratatask/src/: app.rs  event.rs  main.rs  task_list.rs  ui.rs
task_workspace/task_library/: Cargo.toml
task_workspace/task_library/migrations/2025-11-20-172446-0000_crate_tasks/: up.sql
task_workspace/task_library/src/: db.rs  lib.rs  models.rs  schema.rs  task.rs
task_workspace/task_library/src/control/: db.rs  mod.rs
task_workspace/task_web/: Cargo.toml
task_workspace/task_web/src/: main.rs
tasks/: Cargo.toml
tasks/src/: main.rs
w2/: Cargo.toml  tasks.csv  tasks.json
w2/src/: config.rs  control.rs  main.rs  task.rs
w4-teams/: Cargo.toml  tasky.txt
w4-teams/src/: main.rs  task.rs  task_manager_config.rs
w4-teams/src/task/: control.rs
w5-teams/task_workspace/: Cargo.toml
w5-teams/task_workspace/clapity_clap/src/: app_config.rs  console_reader.rs  main.rs
w9-teams/task_workspace/: .env  Cargo.toml  tasky_argument.json
w9-teams/task_workspace/clapity_clap/: Cargo.toml  tasky_argument.json
w9-teams/task_workspace/ratatask/: Cargo.toml  LICENSE  README.md
w9-teams/task_workspace/task_library/: .env  TaskManagementDatabase.db
(+18 files in other folders)
