[package]
name = "task_library"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.3", default-features = false, features = ["sqlite"] }
dotenvy = "0.15.7"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
